# quill

./: .gitignore  Cargo.toml  README.MD  justfile
.bruno/: Create Print Job.yml  Versions.yml  opencollection.yml
crates/quill_config/: Cargo.toml
crates/quill_config/src/: lib.rs
crates/quill_configuration_app/: Cargo.toml  README.MD  build.rs  index.html  justfile  package.json  pnpm-lock.yaml
crates/quill_configuration_app/src/: ErrorBoundry.tsx  configuration_app.rs  main.rs  main.tsx  printer.ts  theme.rs
crates/quill_configuration_app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/quill_configuration_app/src-tauri/capabilities/: default.json
crates/quill_configuration_app/src-tauri/icons/: icon.icns
crates/quill_configuration_app/src-tauri/src/: about.rs  helper_service.rs  lib.rs  logging.rs  main.rs  mod.rs  printers.rs  settings.rs
crates/quill_configuration_app/src-tauri/src/settings/: commands.rs  data.rs
crates/quill_configuration_app/src-tauri/src/util/: logging.rs
crates/quill_configuration_app/src/assets/components/: Navigation.tsx
crates/quill_configuration_app/src/assets/providers/: ThemeProvider.tsx
crates/quill_configuration_app/src/components/: SidePanel.tsx  WindowChrome.tsx  mod.rs  window_chrome.rs
crates/quill_configuration_app/src/components/label_stocks/: LabelStockModal.tsx
crates/quill_configuration_app/src/components/printer_setup/: PrinterList.tsx  SelectedPrinterOptions.tsx
crates/quill_configuration_app/src/css/: index.css
crates/quill_configuration_app/src/pages/: AboutPage.tsx  LabelStocksPage.tsx  LogsPage.tsx  PrintSettingsPage.tsx  PrinterSetupPage.tsx  ServerSecurityPage.tsx  mod.rs
crates/quill_configuration_app/src/providers/: AboutProvider.tsx  QuillPrintersProvider.tsx  QuillSettingsProvider.tsx
crates/quill_configuration_app/src/util/: logger.ts
crates/quill_configuration_app/src/widgets/: mod.rs  titlebar.rs
crates/quill_configuration_app/src/widgets/components/: button.rs
crates/quill_configuration_app/src/widgets/sections/: about.rs  logs.rs  mod.rs  print_settings.rs  printer.rs  server.rs  stocks.rs
crates/quill_lib/: Cargo.toml  README.md
crates/quill_lib/examples/: list_printer_processor_data_types.rs  list_printers.rs  print_tag.rs  test_print.rs
crates/quill_lib/src/: errors.rs  ffi.rs  image_processing.rs  lib.rs  print_orientation.rs  printer_handle.rs  printer_info.rs  printer_status.rs  printers.rs  stock.rs
crates/quill_server/: Cargo.toml  README.MD  build.rs
crates/quill_server/src/: health_endpoint.rs  lib.rs  main.rs  printer_endpoint.rs
crates/quill_server/src/util/: http_error.rs  logging.rs  mod.rs
crates/quill_service/: Cargo.toml  README.MD
crates/quill_service/src/: main.rs
res/: Quill Icon.psd
res/icons/: icon.icns
