[package]
name = "quill_configuration_app"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]
description = "An Iced-rs desktop app for setting up the app and configuring settings."

[[bin]]
name = "quill_config"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["tiny-skia", "tokio", "svg"] }
tokio = { version = "1", features = ["time"] }
quill_lib = { path = "../quill_lib" }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
aurora_iconify = { version = "0.1.1" }
aurora_fonts = { version = "0.1.0" }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[build-dependencies]
winresource = { version = "0.1.31" } # For adding the icon on build.
chrono = { version = "0.4.44", features = ["now", "clock"] }