[package]
name = "quill_server"
version = "0.0.0"
edition = "2024"
authors = ["Drew Chase"]
rust-version = "1.90.0"

[[bin]]
name = "quill_server"
path = "src/main.rs"

[lib]
name = "quill_server_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
actix-web = { version = ">=4.9.0" }
serde_json = { version = ">=1.0.125" }
walkdir = ">=2.5.0"
thiserror = ">=2.0.11"

tracing = { version = "0.1.44", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
color-eyre = { version = "0.6.5", features = ["tracing-error", "track-caller"] }

chrono = { version = "0.4.45" }
tar = "0.4.43"
xz2 = "0.1.7"

quill_config = { path = "../quill_config" }
quill_lib = { path = "../quill_lib" }
image = {version = "0.25.10", features = ["png"]}
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4"] }

[build-dependencies]
walkdir = "2.5.0"
chrono = { version = "0.4.45" }


[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1