[package]
name = "quill_configuration_app"
version = "0.0.0"
description = ""
authors = ["Drew Chase"]
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quill_configuration_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
walkdir = "2.5.0"
chrono = { version = "0.4.45" }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-shell = "2.3.5"
tracing = { version = "0.1.44", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
color-eyre = { version = "0.6.5", features = ["tracing-error", "track-caller"] }
quill_config = { path = "../../quill_config" }
quill_lib = { path = "../../quill_lib" }
reqwest = { version = "0.13.4", features = ["json"] }

chrono = { version = "0.4.45" }
tar = "0.4.43"
xz2 = "0.1.7"
tauri-plugin-opener = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
